  * Moved architecture independant files from /usr/lib to /usr/share, closes: #448951
  * Checked license of linux installer and additions.
  * Repackaged dfsg orig tarball accordingly.
  * Added linux installer, closes: #448749
  * Provide programs with upstream upper/lower case mix as used by upstream.
  * Added linux additions in two seperate packages, closes: #440517

 -- Michael Meskes <meskes@debian.org>  Thu, 01 Nov 2007 14:47:10 +0100

virtualbox-ose (1.5.2-dfsg-2) unstable; urgency=low

  * Adding depends to adduser (Closes: #447271).
  * Conditionally call delgroup in virtualbox-ose.postrm.
  * Replacing virtualbox-modules with virtualbox-ose-modules in
    scripts/VBox.sh.
  * Sorting recommends.
  * Adding patch from Daniel Hahler <ubuntu@thequod.de> to change the error
    message for vboxdrv failure, according to virtualbox-ose-modules.

 -- Daniel Baumann <daniel@debian.org>  Sat, 20 Oct 2007 06:40:00 +0200

virtualbox-ose (1.5.2-dfsg-1) unstable; urgency=low

  [ Michael Meskes ]
  * Made build process install menu file, closes: #444842
  * Move virtualbox to Apps/System.
  * Syncronized desktop and menu file.
  * Documented features missing in Open-Source-Edition in
    README.Debian, closes: #444941
  * Changed menu section to Applications/Emulators.

  [ Daniel Baumann ]
  * Removing useless whitespaces at EOL and EOF in debian/*.
  * Sorting architectures.
  * Sorting build-depends.
  * Sorting control fields.
  * Adding VCS control fields.
  * Adding Homepage control fields.
  * Renaming virtualbox.desktop and virtualbox.xpm to virtualbox-ose.desktop
    and virtualbox-ose.xpm.
  * Using the term 'VirtualBox OSE' consistently in virtualbox-ose.desktop,
    virtualbox-ose-source.README.Debian and virtualbox-ose.menu.
  * Renaming README.Debian and README.rebuild to virtualbox-ose.README.Debian
    and virtualbox-ose.README.rebuild for consistency reasons.
  * Rediffed, cleaned up and properly named all dpatches.