@@ -1,0 +1,5 @@
+/usr/lib/xorg/modules/drivers
+/usr/lib/xorg/modules/mouse
+/usr/sbin
+/sbin
+
