@@ -1,0 +1,20 @@
+#!/bin/sh
+
+set -e
+
+case "${1}" in
+	configure)
+		/usr/lib/virtualbox/x11config.pl
+		;;
+
+	abort-upgrade|abort-deconfigure|abort-remove)
+
+		;;
+
+	*)
+		echo "${0} called with unknown argument \`${1}'" 1>&2
+		exit 1
+		;;
+esac
+
+exit 0
