@@ -13,6 +13,11 @@ virtualbox-ose (1.5.2-dfsg2-1) UNRELEASED; urgency=low
   * Added linux installer, closes: #448749
   * Provide programs with upstream upper/lower case mix as used by upstream.
   * Added linux additions in two seperate packages, closes: #440517
+    TODO:	- guests-utils need an init script
+    		- device creation in guest-modules postinst is a hack and
+		  won't last over a reboot the way it is now
+		- get guest additions to work, my first try resulted in no
+		  mouse pointer at all
 
  -- Michael Meskes <meskes@debian.org>  Thu, 01 Nov 2007 14:47:10 +0100
 
